<resources>
    <string name="app_name">Fermi</string>
    <string name="creator_name">DAD TEAM</string>
    <string name="btnLogin">ВХОД</string>
    <string name="btnRegister">РЕГИСТРАЦИЯ</string>
    <string name="username">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="emailfield">Email</string>
    <string name="repassword">Подтвердите пароль</string>
    <string name="btnAboutUS">О НАС</string>
    <string name="btnStart">НАЧАТЬ</string>
    <string name="btnSettings">НАСТРОЙКИ</string>
    <string name="logout">Выйти</string>
    <string name="profilesettings">Настройки профиля</string>
    <string name="changepassword">Изменить пароль</string>
    <string name="editprofile">Редактировать</string>
    <string name="menuofhome">Меню</string>
    <string name="aboutus">Информация</string>
    <string name="physics">Физика</string>
    <string name="topics">РАЗДЕЛЫ</string>
    <string name="practice">ПРАКТИКА</string>
    <string name="tables">ТАБЛИЦА</string>
    <string name="error">Ошибка</string>
    <string name="ok">ОК</string>
    <string name="can_not_create">Невозможно создать аккаунт</string>
    <string name="invalid_account">Недействительный аккаунт</string>
    <string name="username_exists">Пользователь уже существует</string>
    <string name="user_name">Имя:</string>
    <string name="email_name">Email:</string>
    <string name="password_name">Пароль:</string>
    <string name="failed">Неуспешно</string>
    <string name="write_all">Пожалуйста заполните все поля!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_kinemact2">kinemact2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_optact1">optact1</string>


</resources>