<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:scrollbars="none">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:id="@+id/root_element"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/fermilogo"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="-70dp"
            app:srcCompat="@drawable/newfermilogo" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="165dp"
            android:layout_height="55dp"
            android:layout_marginTop="80dp"
            android:text="@string/btnRegister"
            app:backgroundTint="#641EAA" />


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="165dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/btnLogin"
            app:backgroundTint="#641EAA" />

        <TextView
            android:id="@+id/dadteam"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/athiti_extralight"
            android:text="@string/creator_name"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textStyle="bold"
            android:visibility="visible" />


    </LinearLayout>

</RelativeLayout>

</ScrollView>