<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_profile"
    android:padding="-10dp"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".EditProfileActivity">


        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="180dp"
            android:background="@drawable/ic_wave" />

        <LinearLayout
            android:id="@+id/linear_l2"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:background="#641EAA"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="15dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/profile_image"
                app:civ_border_color="@color/colorPrimary"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/change_profile_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_image"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/candal"
                android:text="Изменить фото профиля"
                android:textColor="#FFFFFF"
                android:textSize="17dp"
                android:textStyle="bold" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/linear_l3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_l2"
            android:layout_marginTop="80dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/username_icon" />

            <TextView
                android:id="@+id/textViewUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/user_name"
                android:textColor="@android:color/black"
                android:textSize="15dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/EditTextUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:fontFamily="sans-serif-thin"
                android:minWidth="48dp"
                android:textColor="@android:color/black"
                android:textSize="14dp"
                android:textStyle="bold" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/linear_l3"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/black" />


        <LinearLayout
            android:id="@+id/linear_l4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_l3"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/email_icon" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/email_name"
                android:textColor="@android:color/black"
                android:textSize="15dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/EditTextEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:fontFamily="sans-serif-thin"
                android:minWidth="48dp"
                android:textColor="@android:color/black"
                android:textSize="14dp"
                android:textStyle="bold" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/linear_l4"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/black" />


        <LinearLayout
            android:id="@+id/linear_l5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_l4"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/passwrod_icon" />

            <TextView
                android:id="@+id/textViewPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/password_name"
                android:textColor="@android:color/black"
                android:textSize="15dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/EditTextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:fontFamily="sans-serif-thin"
                android:minWidth="48dp"
                android:textColor="@android:color/black"
                android:textSize="14dp"
                android:textStyle="bold" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/linear_l5"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/black" />


        <LinearLayout
            android:id="@+id/linear_l6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_l5"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:orientation="vertical">


            <Button
                android:id="@+id/btnSave"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_bg"
                android:fontFamily="@font/candal"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:text="Сохранить"
                android:textColor="@color/white"
                android:textSize="12dp"
                android:textStyle="bold" />


        </LinearLayout>


    </RelativeLayout>
</RelativeLayout>